# loomra

./: .deepsource.toml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  electron.d.ts  electron.js  next.config.mjs  package-lock.json  package.deps.json  package.json  tsconfig.json  vitest.config.mts
.github/workflows/: build-release.yml  ci.yml  clean.yml  emergency-cleanup.yml
__tests__/: setup.ts
__tests__/goal/: goal-factory.test.ts
__tests__/habit/: completion-system.test.ts  habit-factory.test.ts
__tests__/tasks/: task-utils.test.ts
app/: globals.css  layout.tsx  page.tsx  password-verify-screen.tsx  setup-screen.tsx
app/components/: habit-icon.tsx
app/components/dashboard/: dashboard-goals.tsx  dashboard-habit-card.tsx  dashboard-habit-list.tsx  dashboard-habits.tsx  dashboard-tasks.tsx  dashboard-view.tsx
app/components/form/: color-picker.tsx  completion-control.tsx  date-picker.tsx  dynamic-icon-selector.tsx  error-found.tsx  icon-selector.tsx  validated-input.tsx  validated-select.tsx  validated-textarea.tsx
app/components/goals/: empty-state.tsx  filter-bar.tsx  goal-card.tsx  (+11 more)
app/lib/: tauri-api.ts  types.ts
electron/: database-manager.js  ipc-handlers.js  path-manager.js  preload.js
scripts/: release.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  main.rs
src-tauri/src/commands/: app.rs  auth.rs  goals.rs  habit_completions.rs  habits.rs  mod.rs  notifications.rs  settings.rs  tasks.rs  user_data.rs
(+65 files in other folders)
