[package]
name = "loomra"
version = "1.3.1"
description = "Goal Tracker and Habit Manager"
authors = ["Mostafa Waleed"]
repository = "https://github.com/MostafaWaleed0/loomra"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2.9.1", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-shell = "2.3.1"
tauri-plugin-updater = "2.9.0"
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Password hashing
argon2 = "0.5"
rand = "0.8"

# Async runtime
tokio = { version = "1", features = ["sync"] }

# Error handling
thiserror = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
